--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "react-course",
   "version": "0.1.0",
   "private": true,
+  "resolutions": {
+    "handlebars": "4.5.3",
+    "serialize-javascript": "2.1.1"
+  },
   "dependencies": {
     "@material-ui/core": "^4.1.2",
     "@material-ui/icons": "^4.2.1",
