--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "node": ">=10.11"
   },
   "resolutions": {
-    "handlebars": "4.5.3",
-    "serialize-javascript": "2.1.1"
+    "handlebars": "4.5.3"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.2",
@@ -79,11 +78,11 @@
     "react-app-polyfill": "^1.0.4",
     "react-dev-utils": "^9.1.0",
     "resolve": "1.12.0",
-    "resolve-url-loader": "3.1.0",
+    "resolve-url-loader": "^3.1.2",
     "sass-loader": "7.2.0",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
-    "terser-webpack-plugin": "1.4.1",
+    "terser-webpack-plugin": "^5.0.3",
     "ts-pnp": "1.1.4",
     "url-loader": "2.1.0",
     "webpack": "4.41.0",
